--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -10,6 +10,9 @@ body {
   width: 360px;
   padding: 0;
   margin: 0;
+  height: fit-content;
+  max-height: 480px;
+  overflow: auto;
 }
 
 .order-body__wrapper {
@@ -19,18 +22,37 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: repeat(4, 1fr);
   background: white;
+  height: fit-content;
+}
+
+.order-body__text-wrapper {
+  display: flex;
+  align-items: center;
+  padding: 0 20px 0 0;
+  height: 100%;
+}
+
+.order-body__text-wrapper>img {
+  width: 32px;
+  height: 32px;
+  margin-left: auto;
+}
+
+.order-body__text-wrapper>h4 {
+  margin: 0;
 }
 
 .order-body__child {
   display: flex;
   flex-direction: row;
   padding: 0 0 0 20px;
-  height: 48px;
+  max-height: 78px;
 }
 
 .order-body__child[data-title] {
   display: flex;
   flex-direction: column;
+  cursor: pointer;
 }
 
 .order-body__header {
@@ -89,6 +111,21 @@ body {
 }
 
 .dropdown {
-  
-  /* display: none; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #2E67B8;
+}
+
+.dropdown__close-btn {
+  all: unset;
+  cursor: pointer;
+  padding: 12px;
+  width: 32px;
+  height: 32px;
+}
+
+.dropdown__close-btn>img {
+  width: inherit;
+  height: inherit;
 }
