--- a/src/assets/css/order.css
+++ b/src/assets/css/order.css
@@ -20,7 +20,7 @@ body {
   height: 100%;
   width: 100%;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
   background: white;
   height: fit-content;
 }
@@ -45,6 +45,7 @@ body {
 .order-body__child {
   display: flex;
   flex-direction: row;
+  /* padding: 10px 0 10px 20px; */
   padding: 0 0 0 20px;
   max-height: 78px;
 }
@@ -116,6 +117,8 @@ body {
   left: 0;
   background: #2E67B8;
   display: none;
+  overflow-y: auto;
+  height: 100%;
 }
 
 .dropdown__close-btn {
@@ -129,4 +132,14 @@ body {
 .dropdown__close-btn>img {
   width: inherit;
   height: inherit;
+}
+
+.scrolltext {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  width: 100%;
+  height: 100%;
 }
